# ros2-drone-takeoff

./: .gitignore  TraceBack  common.py  geo.py  move.py  package.xml  planer.py  requirements.txt  sensors.py
move/: All_move.py  Idle.py
my_msgs/action/: PlanPath
src/drone_takeoff/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/drone_takeoff/launch/: autonomy.launch.py  autonomy_with_qr.launch.py  qr_detector.launch.py  range_sensors.launch.py  ros_gz_bridges.launch.py  takeoff.launch.py
src/drone_takeoff/resource/: drone_takeoff
src/drone_takeoff/src/drone_takeoff/: autonomy_node.py  lidar_listener_node.py  qr_detector_node.py  takeoff_node.py  ultrasonic_listener_node.py
