[metadata]
name = drone_takeoff
version = 0.1.0
license_files = LICENSE

[options]
packages = find:
install_requires =
    rclpy
    mavsdk
    opencv-python
    numpy
    cv_bridge

[options.entry_points]
console_scripts =
    takeoff_node = drone_takeoff.takeoff_node:main
    qr_detector_node = drone_takeoff.qr_detector_node:main
    lidar_listener_node = drone_takeoff.lidar_listener_node:main
    ultrasonic_listener_node = drone_takeoff.ultrasonic_listener_node:main

