[metadata]
name = drone_takeoff
version = 0.1.0
license_files = LICENSE

[options]
package_dir =
	=src
packages = find:
install_requires =
	mavsdk
	opencv-python
	numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	takeoff_node = drone_takeoff.takeoff_node:main
	qr_detector_node = drone_takeoff.qr_detector_node:main
	lidar_listener_node = drone_takeoff.lidar_listener_node:main
	ultrasonic_listener_node = drone_takeoff.ultrasonic_listener_node:main
	autonomy_node = drone_takeoff.autonomy_node:main

